fix searchbar z-index

--- a/client/src/styles/base/_z-index.scss
+++ b/client/src/styles/base/_z-index.scss
@@ -1,6 +1,6 @@
 $z-index: (
+  searchbar     : 500,
   bottomnav     : 1000,
-  searchbar     : 1500,
   toolbar       : 2000,
   contextmenu   : 3000,
   dropdown      : 4000,
